--- a/styles/header.scss
+++ b/styles/header.scss
@@ -121,6 +121,10 @@
     @include mQ(map-get($breakpoints, md)) {
       margin: 2rem 0;
     }
+
+    &:hover {
+      background: $color-primary-500;
+    }
   }
 
   &__functionality {
