--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,7 +1,3 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components"; 
-@import "tailwindcss/utilities";
-
 @import "./normalize.scss";
 @import "./variables.scss";
 @import "./mixins.scss";
@@ -80,9 +76,5 @@ body {
   margin: 2rem 0 0 0;
   @include mQ(map-get($breakpoints, lg)) {
     margin: 10rem 0 0 0;
-  }
-
-  @include mQ(map-get($breakpoints, xl)) {
-    margin: 20rem 0 0 0;
   }
 }
